<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.invisino.invisino.NewNoteActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/app_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_header_logo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/app_header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/action_new_note"
                android:textAlignment="center" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/new_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp">

            <LinearLayout
                android:id="@+id/new_note_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/character_limit"
                    android:lines="5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/characters_remaining" />

                <Button
                    android:id="@+id/post_new_note"
                    style="?android:textAppearanceSmall"
                    android:layout_width="@dimen/regular_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/post_new_note"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancel_new_note"
                    style="?android:textAppearanceSmall"
                    android:layout_width="@dimen/regular_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@android:string/cancel"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
