<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.invisino.invisino.SettingsActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/app_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_header_logo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/app_header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/action_settings"
                android:textAlignment="center" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/new_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/app_header"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/change_account_info_button"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/regular_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/change_account_info"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_above="@+id/view_my_notes_button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="17dp" />

            <Button
                android:id="@+id/view_my_notes_button"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/regular_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/view_my_notes"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/change_account_info_button" />

            <Button
                android:id="@+id/sign_out_button"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/regular_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="19dp"
                android:layout_below="@+id/view_my_notes_button"
                android:layout_alignStart="@+id/view_my_notes_button" />

            <Button
                android:id="@+id/back_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
